--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "user_ids": ["youruserid"],
+    "user_ids": ["2oEErIJMp0gNXJVfshOf7PtnjUx"],
     "version": "1.0.0",
     "author": "GETGRASS BOT - FREE VERSION"
 }
